--- a/AirLineProject/style.css
+++ b/AirLineProject/style.css
@@ -3,3 +3,20 @@
     padding: 0;
     background-color: aqua;
 }
+
+h1{
+    background-color: black;
+    color: aqua;
+}
+h2{
+    background-color:cadetblue;
+    color:blueviolet;
+}
+h3{
+    background-color: black;
+    color: aqua;
+}
+
+table{
+    background-color:black ;
+}
